--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -23,8 +23,9 @@
   position: absolute;
   top: 330.667px;
   left: 0px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 0 8px;
   -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 0 8px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 0 8px;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.3) 0 0 8px;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #da0000), color-stop(20%, #c60017), color-stop(90%, #83000c));
   background-image: -webkit-linear-gradient(#da0000, #c60017 20%, #83000c 90%);
@@ -117,8 +118,9 @@
   overflow: hidden;
   *zoom: 1;
   float: right;
-  -webkit-box-shadow: 0px 0px 6px #dddddd;
   -moz-box-shadow: 0px 0px 6px #dddddd;
+  -webkit-box-shadow: 0px 0px 6px #dddddd;
+  -o-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
 /* line 103, ../sass/style.sass */
@@ -133,8 +135,9 @@
 }
 /* line 111, ../sass/style.sass */
 .thumbnail-links li:hover, .thumbnail-links #features li.opened, #features .thumbnail-links li.opened, .thumbnail-links li.opened {
-  -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
+  -o-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
 }
 /* line 116, ../sass/style.sass */
@@ -221,13 +224,15 @@
   color: #fffdf7;
   padding: 6px;
   font-size: 11px;
-  -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
+  -webkit-border-radius: 3px;
   -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -khtml-border-radius: 3px;
   border-radius: 3px;
-  -webkit-box-shadow: 0px 0px 6px #cccccc;
   -moz-box-shadow: 0px 0px 6px #cccccc;
+  -webkit-box-shadow: 0px 0px 6px #cccccc;
+  -o-box-shadow: 0px 0px 6px #cccccc;
   box-shadow: 0px 0px 6px #cccccc;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
@@ -252,11 +257,15 @@
   float: left;
   width: 974px;
 }
-/* line 211, ../sass/style.sass */
+/* line 210, ../sass/style.sass */
+#photos .main {
+  display: block;
+}
+/* line 213, ../sass/style.sass */
 #photos .thumbs {
   display: none;
 }
-/* line 213, ../sass/style.sass */
+/* line 215, ../sass/style.sass */
 #photos .thumbs ul {
   list-style: none;
   width: 652.58px;
@@ -264,7 +273,7 @@
   padding-left: 0px;
   margin: 4px;
 }
-/* line 219, ../sass/style.sass */
+/* line 221, ../sass/style.sass */
 #photos .thumbs ul li {
   height: 96.222px;
   width: 96.222px;
@@ -274,52 +283,54 @@
   overflow: hidden;
   *zoom: 1;
   float: left;
-  -webkit-box-shadow: 0px 0px 6px #dddddd;
   -moz-box-shadow: 0px 0px 6px #dddddd;
+  -webkit-box-shadow: 0px 0px 6px #dddddd;
+  -o-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 228, ../sass/style.sass */
+/* line 230, ../sass/style.sass */
 #photos .thumbs ul li figure {
   height: 96.222px;
   width: 96.222px;
   margin: 0px;
 }
-/* line 233, ../sass/style.sass */
+/* line 235, ../sass/style.sass */
 #photos .thumbs ul li figure img {
   width: 100%;
 }
-/* line 239, ../sass/style.sass */
+/* line 241, ../sass/style.sass */
 #photos .thumbs ul li.opened {
-  -webkit-box-shadow: 0px 0px 6px #333333;
   -moz-box-shadow: 0px 0px 6px #333333;
+  -webkit-box-shadow: 0px 0px 6px #333333;
+  -o-box-shadow: 0px 0px 6px #333333;
   box-shadow: 0px 0px 6px #333333;
 }
-/* line 245, ../sass/style.sass */
+/* line 247, ../sass/style.sass */
 #photos article.photoset {
   display: none;
   height: 370px;
   width: 974px;
 }
-/* line 251, ../sass/style.sass */
+/* line 253, ../sass/style.sass */
 #photos article.photoset.opened {
   display: block;
 }
-/* line 255, ../sass/style.sass */
+/* line 257, ../sass/style.sass */
 #photos .photo {
   float: left;
 }
-/* line 257, ../sass/style.sass */
+/* line 259, ../sass/style.sass */
 #photos .photo figure {
   width: 652.58px;
   height: 370px;
   margin: 0px;
 }
-/* line 261, ../sass/style.sass */
+/* line 263, ../sass/style.sass */
 #photos .photo figure img {
   width: 100%;
   float: left;
 }
-/* line 266, ../sass/style.sass */
+/* line 268, ../sass/style.sass */
 #photos .photo figcaption {
   width: 305.42px;
   margin: 0px;
@@ -332,11 +343,12 @@
   *zoom: 1;
   padding: 8px;
   background-color: #faf7ed;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   -moz-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
+  -o-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
 }
-/* line 279, ../sass/style.sass */
+/* line 281, ../sass/style.sass */
 #photos .photo figcaption .notch {
   position: absolute;
   color: #faf7ed;
@@ -346,24 +358,24 @@
   margin: 0px;
   padding: 0px;
 }
-/* line 289, ../sass/style.sass */
+/* line 291, ../sass/style.sass */
 #photos .photo figcaption p {
   margin: 0px;
 }
-/* line 293, ../sass/style.sass */
+/* line 295, ../sass/style.sass */
 #photos .photo figcaption .credit {
   font-size: 11px;
 }
-/* line 302, ../sass/style.sass */
+/* line 304, ../sass/style.sass */
 #photos .photo.opened {
   display: block;
 }
-/* line 306, ../sass/style.sass */
+/* line 308, ../sass/style.sass */
 #photos .content {
   z-index: 0;
   float: left;
 }
-/* line 311, ../sass/style.sass */
+/* line 313, ../sass/style.sass */
 #photos .controls {
   width: 188px;
   height: 68px;
@@ -373,7 +385,7 @@
   left: 232.29px;
   top: 128.333px;
 }
-/* line 320, ../sass/style.sass */
+/* line 322, ../sass/style.sass */
 #photos .controls .prev, #photos .controls .next, #photos .controls .thumbs-button {
   height: 60px;
   width: 60px;
@@ -384,59 +396,63 @@
   margin: 4px;
   border: solid 4px rgba(0, 0, 0, 0.6);
 }
-/* line 331, ../sass/style.sass */
+/* line 333, ../sass/style.sass */
 #photos .controls .prev p, #photos .controls .next p, #photos .controls .thumbs-button p {
   position: relative;
   margin: 0px;
   margin-top: -8px;
   opacity: 0.6;
 }
-/* line 339, ../sass/style.sass */
+/* line 341, ../sass/style.sass */
 #photos .controls .prev {
   left: 0px;
   -moz-border-radius-topleft: 60px;
   -webkit-border-top-left-radius: 60px;
-  -ms-border-top-left-radius: 60px;
   -o-border-top-left-radius: 60px;
+  -ms-border-top-left-radius: 60px;
+  -khtml-border-top-left-radius: 60px;
   border-top-left-radius: 60px;
   -moz-border-radius-bottomleft: 60px;
   -webkit-border-bottom-left-radius: 60px;
-  -ms-border-bottom-left-radius: 60px;
   -o-border-bottom-left-radius: 60px;
+  -ms-border-bottom-left-radius: 60px;
+  -khtml-border-bottom-left-radius: 60px;
   border-bottom-left-radius: 60px;
 }
-/* line 343, ../sass/style.sass */
+/* line 345, ../sass/style.sass */
 #photos .controls .prev p {
   margin-left: 12px;
 }
-/* line 348, ../sass/style.sass */
+/* line 350, ../sass/style.sass */
 #photos .controls .next {
   left: 128px;
   -moz-border-radius-topright: 60px;
   -webkit-border-top-right-radius: 60px;
-  -ms-border-top-right-radius: 60px;
   -o-border-top-right-radius: 60px;
+  -ms-border-top-right-radius: 60px;
+  -khtml-border-top-right-radius: 60px;
   border-top-right-radius: 60px;
   -moz-border-radius-bottomright: 60px;
   -webkit-border-bottom-right-radius: 60px;
-  -ms-border-bottom-right-radius: 60px;
   -o-border-bottom-right-radius: 60px;
+  -ms-border-bottom-right-radius: 60px;
+  -khtml-border-bottom-right-radius: 60px;
   border-bottom-right-radius: 60px;
 }
-/* line 353, ../sass/style.sass */
+/* line 355, ../sass/style.sass */
 #photos .controls .next p {
   text-align: right;
   margin-right: 12px;
 }
-/* line 359, ../sass/style.sass */
+/* line 361, ../sass/style.sass */
 #photos .controls .thumbs-button {
   left: 64px;
 }
-/* line 362, ../sass/style.sass */
+/* line 364, ../sass/style.sass */
 #photos .controls .thumbs-button p {
   text-align: center;
 }
-/* line 368, ../sass/style.sass */
+/* line 370, ../sass/style.sass */
 #photos .navlinks {
   z-index: 50;
   position: absolute;
@@ -448,7 +464,7 @@
   float: right;
   left: 652.58px;
 }
-/* line 379, ../sass/style.sass */
+/* line 381, ../sass/style.sass */
 #photos .navlinks header {
   margin: 8px;
   line-height: 16px;
@@ -456,37 +472,39 @@
   text-transform: uppercase;
   border-bottom: solid 1px black;
 }
-/* line 387, ../sass/style.sass */
+/* line 389, ../sass/style.sass */
 #photos .navlinks ul {
   list-style: none;
   margin: 8px;
   padding: 0px;
 }
-/* line 392, ../sass/style.sass */
+/* line 394, ../sass/style.sass */
 #photos .navlinks ul li.opened {
   color: #666666;
 }
-/* line 397, ../sass/style.sass */
+/* line 399, ../sass/style.sass */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
   margin: 4px;
   background-color: black;
   padding: 0px;
-  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+  -o-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
   overflow: hidden;
   *zoom: 1;
 }
-/* line 405, ../sass/style.sass */
+/* line 407, ../sass/style.sass */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 410, ../sass/style.sass */
+/* line 412, ../sass/style.sass */
 #photos .navlinks figure.opened {
-  -webkit-box-shadow: 0px 0px 5px black;
   -moz-box-shadow: 0px 0px 5px black;
+  -webkit-box-shadow: 0px 0px 5px black;
+  -o-box-shadow: 0px 0px 5px black;
   box-shadow: 0px 0px 5px black;
 }
