Starting to wrangle the Videos panel.

--- a/hero/sass/_variables.sass
+++ b/hero/sass/_variables.sass
@@ -22,6 +22,11 @@ $photos-thumb-margin: 4px
 $photos-thumb-dim: $feature-content-height/4 - $thumblinks-margin*4
 $photos-feature-content: $hero-width*.67
 
+$videos-height: $feature-content-height+6
+$video-height: $feature-content-height*.75
+$video-width: $hero-width*.5
+$video-dim-ratio: 560/315
+
 $nav-dim: 60px
 $nav-arrow-margin: 12px
 $controls-width: $nav-dim*3 + 8
