--- a/hero/sass/style.sass
+++ b/hero/sass/style.sass
@@ -414,3 +414,28 @@
 		
 	
 
+#videos
+	.feature-content
+		margin: 0px
+		padding: 0px
+		height: $feature-content-height + $hero-padding + 2
+		+clearfix
+		float: left
+		width: $hero-width
+		
+	.feature-article
+		position: absolute
+		
+	.article-content
+		position: absolute
+		
+	p
+		margin: 0px
+		height: $videos-height
+		
+	.mainVid
+		height: $videos-height
+		width: $videos-height*$video-dim-ratio
+	//width: $video-width
+		//padding: 10px
+
