--- a/hero/sass/_variables.sass
+++ b/hero/sass/_variables.sass
@@ -23,9 +23,10 @@ $photos-thumb-dim: $feature-content-height/4 - $thumblinks-margin*4
 $photos-feature-content: $hero-width*.67
 
 $videos-height: $feature-content-height+6
-$video-height: $feature-content-height*.75
-$video-width: $hero-width*.5
 $video-dim-ratio: 560/315
+$video-width: $videos-height*$video-dim-ratio
+$side-width: $hero-width - $video-width
+
 
 $nav-dim: 60px
 $nav-arrow-margin: 12px
