Styled the videos panel. Need to decide if I want to add red outlines when you hover over the various videos.

--- a/hero/sass/_variables.sass
+++ b/hero/sass/_variables.sass
@@ -26,6 +26,8 @@ $videos-height: $feature-content-height+6
 $video-dim-ratio: 560/315
 $video-width: $videos-height*$video-dim-ratio
 $side-width: $hero-width - $video-width
+$side-padding: 20px 12px
+$video-thumbs-width: $side-width - 20px
 
 
 $nav-dim: 60px
