Styling on the Blogs panel.

--- a/hero/sass/_variables.sass
+++ b/hero/sass/_variables.sass
@@ -30,6 +30,16 @@ $side-padding: 20px 12px
 $video-thumbs-width: $side-width - 20px
 
 
+$blog-primary-line-height: 20px
+$blog-primary-img-margin-top: 4px
+$blog-primary-img-margin-bottom: 4px
+$blog-primary-img-dim: $blog-primary-line-height*6 - $blog-primary-img-margin-top - $blog-primary-img-margin-bottom
+
+$blog-secondary-line-height: 17px
+$blog-secondary-img-margin-top: 4px
+$blog-secondary-img-margin-bottom: 4px
+$blog-secondary-img-dim: $blog-secondary-line-height*4 - $blog-secondary-img-margin-top - $blog-secondary-img-margin-bottom
+
 $nav-dim: 60px
 $nav-arrow-margin: 12px
 $controls-width: $nav-dim*3 + 8
