--- a/hero/sass/style.sass
+++ b/hero/sass/style.sass
@@ -499,3 +499,74 @@
 			
 			img
 				height: 70px
+				
+/////////BLOGS
+
+#blogs
+	p
+		font-family: $sans
+		
+.blog-preview
+	margin-top: -10px
+
+.primary
+	width: $feature-content-height - 8px
+	height: $feature-content-height - 8px
+	padding: 8px
+	float: left
+	+clearfix
+	
+	.blog-entry-title
+		font-size: 22px
+		font-family: $serif
+		
+	.blog-entry-data
+		font-family: $sans
+		color: #666
+		font-size: 13px
+		
+	figure
+		float: left
+		height: $blog-primary-img-dim
+		width: $blog-primary-img-dim
+		margin: $blog-primary-img-margin-top 8px $blog-primary-img-margin-bottom 0px
+		background-color: #000
+		+clearfix
+		
+		img
+			height: 100%
+			
+	p
+		font-size: 14px
+		line-height: $blog-primary-line-height
+		
+.secondary
+	width: $feature-content-height - 8px
+	height: $feature-content-height - 8px
+	padding: 8px
+	float: left
+	+clearfix
+	
+	.blog-entry-title
+		font-size: 18px
+		font-family: $serif
+		
+	.blog-entry-data
+		font-family: $sans
+		color: #666
+		font-size: 12px
+		
+	figure
+		float: left
+		height: $blog-secondary-img-dim
+		width: $blog-secondary-img-dim
+		margin: $blog-secondary-img-margin-top 8px $blog-secondary-img-margin-bottom 0px
+		background-color: #000
+		+clearfix
+
+		img
+			height: 100%
+
+	p
+		font-size: 13px
+		line-height: $blog-secondary-line-height
