All basic styling done in the 'blogs' panel.

--- a/hero/sass/_variables.sass
+++ b/hero/sass/_variables.sass
@@ -40,6 +40,9 @@ $blog-secondary-img-margin-top: 4px
 $blog-secondary-img-margin-bottom: 4px
 $blog-secondary-img-dim: $blog-secondary-line-height*4 - $blog-secondary-img-margin-top - $blog-secondary-img-margin-bottom
 
+$blog-head-height-padding: 3px
+$blog-head-height: 66px
+
 $nav-dim: 60px
 $nav-arrow-margin: 12px
 $controls-width: $nav-dim*3 + 8
