--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -577,7 +577,7 @@
 #videos .view-obie-vids {
   position: absolute;
   bottom: 0px;
-  width: 374.148px;
+  width: 375.148px;
   background-color: #faf7ed;
   -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -635,37 +635,41 @@
   height: 70px;
 }
 
-/* line 506, ../sass/style.sass */
+/* line 507, ../sass/style.sass */
+#blogs .article-content {
+  width: 974px;
+}
+/* line 510, ../sass/style.sass */
 #blogs p {
   font-family: "Helvetica", "Arial", sans-serif;
 }
 
-/* line 509, ../sass/style.sass */
+/* line 513, ../sass/style.sass */
 .blog-preview {
   margin-top: -10px;
 }
 
-/* line 512, ../sass/style.sass */
+/* line 516, ../sass/style.sass */
 .primary {
-  width: 316.667px;
+  width: 308.667px;
   height: 316.667px;
   padding: 8px;
   float: left;
   overflow: hidden;
   *zoom: 1;
 }
-/* line 519, ../sass/style.sass */
+/* line 523, ../sass/style.sass */
 .primary .blog-entry-title {
   font-size: 22px;
   font-family: "Georgia", "Times New Roman", serif;
 }
-/* line 523, ../sass/style.sass */
+/* line 527, ../sass/style.sass */
 .primary .blog-entry-data {
   font-family: "Helvetica", "Arial", sans-serif;
   color: #666666;
   font-size: 13px;
 }
-/* line 528, ../sass/style.sass */
+/* line 532, ../sass/style.sass */
 .primary figure {
   float: left;
   height: 112px;
@@ -675,37 +679,37 @@
   overflow: hidden;
   *zoom: 1;
 }
-/* line 536, ../sass/style.sass */
+/* line 540, ../sass/style.sass */
 .primary figure img {
   height: 100%;
 }
-/* line 539, ../sass/style.sass */
+/* line 543, ../sass/style.sass */
 .primary p {
   font-size: 14px;
   line-height: 20px;
 }
 
-/* line 543, ../sass/style.sass */
+/* line 547, ../sass/style.sass */
 .secondary {
-  width: 316.667px;
+  width: 308.667px;
   height: 316.667px;
   padding: 8px;
   float: left;
   overflow: hidden;
   *zoom: 1;
 }
-/* line 550, ../sass/style.sass */
+/* line 554, ../sass/style.sass */
 .secondary .blog-entry-title {
   font-size: 18px;
   font-family: "Georgia", "Times New Roman", serif;
 }
-/* line 554, ../sass/style.sass */
+/* line 558, ../sass/style.sass */
 .secondary .blog-entry-data {
   font-family: "Helvetica", "Arial", sans-serif;
   color: #666666;
   font-size: 12px;
 }
-/* line 559, ../sass/style.sass */
+/* line 563, ../sass/style.sass */
 .secondary figure {
   float: left;
   height: 60px;
@@ -715,12 +719,77 @@
   overflow: hidden;
   *zoom: 1;
 }
-/* line 567, ../sass/style.sass */
+/* line 571, ../sass/style.sass */
 .secondary figure img {
   height: 100%;
 }
-/* line 570, ../sass/style.sass */
+/* line 574, ../sass/style.sass */
 .secondary p {
   font-size: 13px;
   line-height: 17px;
+}
+
+/* line 578, ../sass/style.sass */
+.tertiary {
+  width: 308.667px;
+  height: 316.667px;
+  padding: 8px;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+}
+/* line 585, ../sass/style.sass */
+.tertiary figure {
+  height: 66px;
+  width: 66px;
+  margin: 0px;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+  background-color: black;
+  margin-right: 6px;
+}
+/* line 594, ../sass/style.sass */
+.tertiary figure img {
+  height: 100%;
+}
+/* line 597, ../sass/style.sass */
+.tertiary .blog-entry-title {
+  margin-top: 4px;
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+}
+/* line 603, ../sass/style.sass */
+.tertiary .blog-entry-data {
+  font-family: "Helvetica", "Arial", sans-serif;
+  color: #666666;
+  font-size: 13px;
+}
+
+/* line 609, ../sass/style.sass */
+.blog-head {
+  width: 100%;
+  height: 66px;
+  padding: 3px;
+}
+
+/* line 614, ../sass/style.sass */
+.blogs-linky {
+  position: absolute;
+  bottom: 10px;
+  background-color: #faf7ed;
+  font-family: "Helvetica", "Arial", sans-serif;
+  text-align: right;
+  padding: 6px;
+  width: 308.667px;
+  font-size: 14px;
+  -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+/* line 625, ../sass/style.sass */
+.blogs-linky p {
+  margin: 0px;
 }
